Feat: Add button to each country

--- a/src/japan.html
+++ b/src/japan.html
@@ -58,6 +58,7 @@
         <hr class="destinations-hr" />
         <ul class="list-group oc-bucket-list-group" id="bucket-list">
         </ul>
+        <iframe src="components/export-button.html" style="width:100%; height:500px; border:none;"></iframe>
       </div>
     </div>
   </div>
@@ -117,7 +118,7 @@
           </div>
         </div>
       </div>
-      
+
       <!-- This is the Osaka card -->
       <div class="col-md-3 mb-3">
         <div class="card bg-dark text-white text-center result-items">
@@ -152,101 +153,101 @@
           <div>
             <div class="form-check overlay">
               <label class="city-card-check-box">
-                <input class="form-check-input city-card-input" type="checkbox" id="YokohamaCheckbox" data-city="Yokohama"
-                  data-country="Japan" />
+                <input class="form-check-input city-card-input" type="checkbox" id="YokohamaCheckbox"
+                  data-city="Yokohama" data-country="Japan" />
               </label>
             </div>
           </div>
         </div>
       </div>
     </div>
-      <div class="row">
-        <!-- This is the Nagoya card -->
-        <div class="col-md-3 mb-3">
-          <div class="card bg-dark text-white text-center result-items">
-            <img src="img/japan/Nagoya/Nagoya.jpeg" class="card-img city-card" />
-            <div class="card-img-overlay" data-bs-toggle="offcanvas" data-bs-target="#Nagoya"
-              aria-controls="offcanvasExample">
-              <h5 class="card-title" style="text-indent: -15px;">Nagoya, Japan</h5>
-            </div>
-
-
-            <div>
-              <div class="form-check overlay">
-                <label class="city-card-check-box">
-                  <input class="form-check-input city-card-input" type="checkbox" id="NagoyaCheckbox" data-city="Nagoya"
-                    data-country="Japan" />
-                </label>
-              </div>
-            </div>
+    <div class="row">
+      <!-- This is the Nagoya card -->
+      <div class="col-md-3 mb-3">
+        <div class="card bg-dark text-white text-center result-items">
+          <img src="img/japan/Nagoya/Nagoya.jpeg" class="card-img city-card" />
+          <div class="card-img-overlay" data-bs-toggle="offcanvas" data-bs-target="#Nagoya"
+            aria-controls="offcanvasExample">
+            <h5 class="card-title" style="text-indent: -15px;">Nagoya, Japan</h5>
           </div>
-        </div>
-
-        <!-- This is the Kobe card -->
-        <div class="col-md-3 mb-3">
-          <div class="card bg-dark text-white text-center result-items">
-            <img src="img/japan/Kobe/Kobe.jpeg" class="card-img city-card" />
-            <div class="card-img-overlay" data-bs-toggle="offcanvas" data-bs-target="#Kobe"
-              aria-controls="offcanvasExample">
-              <h5 class="card-title" style="text-indent: -15px;">Kobe, Japan</h5>
-            </div>
 
 
-            <div>
-              <div class="form-check overlay">
-                <label class="city-card-check-box">
-                  <input class="form-check-input city-card-input" type="checkbox" id="KobeCheckbox" data-city="Kobe"
-                    data-country="Japan" />
-                </label>
-              </div>
-            </div>
-          </div>
-        </div>
-
-
-        <!-- This is the Hiroshima card -->
-        <div class="col-md-3 mb-3">
-          <div class="card bg-dark text-white text-center result-items">
-            <img src="img/japan/Hiroshima/Hiroshima.jpeg" class="card-img city-card" />
-            <div class="card-img-overlay" data-bs-toggle="offcanvas" data-bs-target="#Hiroshima"
-              aria-controls="offcanvasExample">
-              <h5 class="card-title" style="text-indent: -15px;">Hiroshima, Japan</h5>
-            </div>
-
-
-            <div>
-              <div class="form-check overlay">
-                <label class="city-card-check-box">
-                  <input class="form-check-input city-card-input" type="checkbox" id="HiroshimaCheckbox" data-city="Hiroshima"
-                    data-country="Japan" />
-                </label>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- This is the Takayama card -->
-        <div class="col-md-3 mb-3">
-          <div class="card bg-dark text-white text-center result-items">
-            <img src="img/japan/Takayama/Takayama.jpeg" class="card-img city-card" />
-            <div class="card-img-overlay" data-bs-toggle="offcanvas" data-bs-target="#Takayama"
-              aria-controls="offcanvasExample">
-              <h5 class="card-title" style="text-indent: -15px;">Takayama, Japan</h5>
-            </div>
-
-
-            <div>
-              <div class="form-check overlay">
-                <label class="city-card-check-box">
-                  <input class="form-check-input city-card-input" type="checkbox" id="TakayamaCheckbox" data-city="Takayama"
-                    data-country="Japan" />
-                </label>
-              </div>
+          <div>
+            <div class="form-check overlay">
+              <label class="city-card-check-box">
+                <input class="form-check-input city-card-input" type="checkbox" id="NagoyaCheckbox" data-city="Nagoya"
+                  data-country="Japan" />
+              </label>
             </div>
           </div>
         </div>
       </div>
 
+      <!-- This is the Kobe card -->
+      <div class="col-md-3 mb-3">
+        <div class="card bg-dark text-white text-center result-items">
+          <img src="img/japan/Kobe/Kobe.jpeg" class="card-img city-card" />
+          <div class="card-img-overlay" data-bs-toggle="offcanvas" data-bs-target="#Kobe"
+            aria-controls="offcanvasExample">
+            <h5 class="card-title" style="text-indent: -15px;">Kobe, Japan</h5>
+          </div>
+
+
+          <div>
+            <div class="form-check overlay">
+              <label class="city-card-check-box">
+                <input class="form-check-input city-card-input" type="checkbox" id="KobeCheckbox" data-city="Kobe"
+                  data-country="Japan" />
+              </label>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <!-- This is the Hiroshima card -->
+      <div class="col-md-3 mb-3">
+        <div class="card bg-dark text-white text-center result-items">
+          <img src="img/japan/Hiroshima/Hiroshima.jpeg" class="card-img city-card" />
+          <div class="card-img-overlay" data-bs-toggle="offcanvas" data-bs-target="#Hiroshima"
+            aria-controls="offcanvasExample">
+            <h5 class="card-title" style="text-indent: -15px;">Hiroshima, Japan</h5>
+          </div>
+
+
+          <div>
+            <div class="form-check overlay">
+              <label class="city-card-check-box">
+                <input class="form-check-input city-card-input" type="checkbox" id="HiroshimaCheckbox"
+                  data-city="Hiroshima" data-country="Japan" />
+              </label>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- This is the Takayama card -->
+      <div class="col-md-3 mb-3">
+        <div class="card bg-dark text-white text-center result-items">
+          <img src="img/japan/Takayama/Takayama.jpeg" class="card-img city-card" />
+          <div class="card-img-overlay" data-bs-toggle="offcanvas" data-bs-target="#Takayama"
+            aria-controls="offcanvasExample">
+            <h5 class="card-title" style="text-indent: -15px;">Takayama, Japan</h5>
+          </div>
+
+
+          <div>
+            <div class="form-check overlay">
+              <label class="city-card-check-box">
+                <input class="form-check-input city-card-input" type="checkbox" id="TakayamaCheckbox"
+                  data-city="Takayama" data-country="Japan" />
+              </label>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+
+  </div>
   </div>
 
   <!-- This is the offCanvas for Kyoto. -->
