--- a/src/argentina.html
+++ b/src/argentina.html
@@ -58,6 +58,7 @@
         <hr class="destinations-hr" />
         <ul class="list-group oc-bucket-list-group" id="bucket-list">
         </ul>
+        <iframe src="components/export-button.html" style="width:100%; height:500px; border:none;"></iframe>
       </div>
     </div>
   </div>
@@ -248,12 +249,12 @@
         </div>
       </div>
     </div>
-    </div>
+  </div>
 
 
 
-      <!-- This is the offCanvas for Buenos Aires. -->
-    <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="BuenosAires"
+  <!-- This is the offCanvas for Buenos Aires. -->
+  <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="BuenosAires"
     aria-labelledby="BuenosAiresOffCanvas">
     <div class="offcanvas-header">
       <h5 class="offcanvas-title" id="BuenosAiresOffCanvas">
@@ -264,7 +265,8 @@
     <div class="offcanvas-body">
       <!-- Add to Bucket List Button -->
       <div class="d-flex justify-content-center align-items-center mb-3">
-        <button id="Buenos.Aires-Argentina" type="button" class="btn btn-outline-success w-100 add-remove-city a-ba-city-button">
+        <button id="Buenos.Aires-Argentina" type="button"
+          class="btn btn-outline-success w-100 add-remove-city a-ba-city-button">
           Add City to Bucket List
         </button>
       </div>
@@ -342,8 +344,8 @@
     </div>
   </div>
 
-     <!-- This is the offCanvas for Mendoza. -->
-    <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="Mendoza"
+  <!-- This is the offCanvas for Mendoza. -->
+  <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="Mendoza"
     aria-labelledby="MendozaOffCanvas">
     <div class="offcanvas-header">
       <h5 class="offcanvas-title" id="MendozaOffCanvas">
