--- a/src/dropdowns.html
+++ b/src/dropdowns.html
@@ -22,6 +22,11 @@
 </head>
 
 <body>
+  <div class="video-container">
+    <video autoplay muted loop style="height: 100vh">
+      <source src="earth.mp4" type="video/mp4">
+    </video>
+  </div>
   <div class="dropdownbutton-container">
     <button id="dropdownMenuButton" class="btn-secondary dropdown-toggle dropdown-button" type="button"
       data-bs-toggle="dropdown" aria-expanded="false" data-bs-placement="bottom">
