Fix: Landing Button Bug

--- a/src/dropdowns.html
+++ b/src/dropdowns.html
@@ -22,35 +22,38 @@
 </head>
 
 <body>
+  <!-- <div class="wrap-body"> -->
   <div class="video-container">
     <video autoplay muted loop style="height: 100vh">
       <source src="earth.mp4" type="video/mp4">
     </video>
   </div>
-  <div class="dropdownbutton-container">
-    <button id="dropdownMenuButton" class="btn-secondary dropdown-toggle dropdown-button" type="button"
-      data-bs-toggle="dropdown" aria-expanded="false" data-bs-placement="bottom">
-      Countries
-    </button>
-    <div class="dropdown-menu">
-      <a class="dropdown-item" href="argentina.html">Argentina</a>
-      <a class="dropdown-item" href="france2.html">France</a>
-      <a class="dropdown-item" href="japan.html">Japan</a>
-      <a class="dropdown-item" href="morocco.html">Morocco</a>
-      <a class="dropdown-item" href="us.html">United States</a>
+  <div class="wrap-body">
+    <div class="dropdownbutton-container">
+      <button id="dropdownMenuButton" class="btn-secondary dropdown-toggle dropdown-button" type="button"
+        data-bs-toggle="dropdown" aria-expanded="false" data-bs-placement="bottom">
+        Countries
+      </button>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" href="argentina.html">Argentina</a>
+        <a class="dropdown-item" href="france2.html">France</a>
+        <a class="dropdown-item" href="japan.html">Japan</a>
+        <a class="dropdown-item" href="morocco.html">Morocco</a>
+        <a class="dropdown-item" href="us.html">United States</a>
+      </div>
     </div>
-  </div>
-  <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      // Dynamically set the placement to bottom (or any other value)
-      const dropdownButton = document.getElementById('dropdownMenuButton');
-      dropdownButton.setAttribute('data-popper-placement', 'bottom'); // You can change this dynamically
+    <script>
+      document.addEventListener('DOMContentLoaded', function () {
+        // Dynamically set the placement to bottom (or any other value)
+        const dropdownButton = document.getElementById('dropdownMenuButton');
+        dropdownButton.setAttribute('data-popper-placement', 'bottom'); // You can change this dynamically
 
-      // Initialize dropdown using JavaScript
-      const dropdown = new bootstrap.Dropdown(dropdownButton);
-      dropdown.show(); // Show dropdown if needed
-    });
-  </script>
+        // Initialize dropdown using JavaScript
+        const dropdown = new bootstrap.Dropdown(dropdownButton);
+        dropdown.show(); // Show dropdown if needed
+      });
+    </script>
+  </div>
 </body>
 
 </html>
