Show selected attractions on the bucket list

--- a/src/argentina.html
+++ b/src/argentina.html
@@ -111,7 +111,7 @@
 
 
           <div>
-            <div class="form-check overlay" onclick="added_alert(add_city_message)">
+            <div class="form-check overlay">
               <label class="city-card-check-box">
                 <input class="form-check-input city-card-input" type="checkbox" id="MendozaCheckbox" data-city="Mendoza"
                   data-country="Argentina" />
