--- a/src/us.html
+++ b/src/us.html
@@ -22,54 +22,38 @@
   <title>United States</title>
 </head>
 
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="css/main.css" />
-<script type="module" src="js/search_bar.js" defer></script>
-<script type="module" src="js/us.js"></script>
-<script type="module" src="js/data.js"></script>
-<title>Document</title>
-</head>
-
 <body>
   <!--nav bar-->
   <nav class="nav-header">
-    <div class="container-fluid d-flex align-items-center justify-content-between">
-      <button class="bucket-icon" type="button" data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop"
-        aria-controls="staticBackdrop">
-        <img src="img/main/bucket.png" alt="bucket image" style="width: 70px; height: 100px; object-fit: cover" />
+    <div 
+      class="container-fluid d-flex align-items-center justify-content-between"
+    >
+      <button 
+        class="bucket-icon" 
+        type="button" 
+        data-bs-toggle="offcanvas" 
+        data-bs-target="#staticBackdrop"
+        aria-controls="staticBackdrop"
+      >
+        <img 
+          src="img/main/bucket.png" 
+          alt="bucket image" 
+          style="width: 70px; height: 100px; object-fit: cover" 
+        />
       </button>
       <div class="header-text">
-        <a href="dropdowns.html">PICK YOUR PLACE</a>
-      </div>
-<nav class="nav-header">
-  <div class="container-fluid d-flex align-items-center justify-content-between">
-    <button class="bucket-icon" type="button" data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop"
-      aria-controls="staticBackdrop">
-      <img src="img/main/bucket.png" alt="bucket image" style="width: 70px; height: 100px; object-fit: cover" />
-    </button>
-    <div class="header-text">
-      <a href="dropdowns.html">PICK YOUR PLACE</a>
-    </div>
-  </nav>
-  <hr class="navbar-brand-hr" />
+          <a href="dropdowns.html">PICK YOUR PLACE</a>
+        </div>
+      </nav>
+    <hr class="navbar-brand-hr" />
 
+<body>
   <!-- Country Title -->
   <div class="container text-center mt-4">
     <h1 id="countryTitle">United States</h1>
   </div>
-</nav>
-<hr class="navbar-brand-hr" />
 
-<!-- Country Title -->
-<div class="container text-center mt-4">
-  <h1 id="countryTitle">United States</h1>
-</div>
-
-<div class="offcanvas offcanvas-start oc-bucket-list" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop"
+  <div class="offcanvas offcanvas-start oc-bucket-list" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop"
   aria-labelledby="staticBackdropLabel">
   <div class="offcanvas-header oc-bucket-list-header">
     <h5 class="offcanvas-title oc-bucket-list-title" id="staticBackdropLabel">
@@ -138,6 +122,8 @@
       <iframe src="components/export-button.html" style="width:100%; height:500px; border:none;"></iframe>
     </div>
   </div>
+</div>
+
 
   <!--alert button-->
   <div id="alert_box"></div>
