fix: Update attraction styling on bucket list offcanvas and add scroll functionality

--- a/src/morocco.html
+++ b/src/morocco.html
@@ -85,7 +85,7 @@
       <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <hr class="destinations-hr" />
-    <div class="list-offcanvas-body">
+    <div class="offcanvas-body">
       <div>
         <p class="destinations-offcanvas-label">
           Here are the destinations that you have added to your list. Have a
