fix: Update Florida spelling

--- a/src/us.html
+++ b/src/us.html
@@ -208,7 +208,7 @@
           <img src="img/us/miami/miami.jpeg" class="card-img city-card" />
           <div class="card-img-overlay" data-bs-toggle="offcanvas" data-bs-target="#Miami"
             aria-controls="offcanvasExample">
-            <h5 class="card-title" style="text-indent: -15px;">Miami, Flordia</h5>
+            <h5 class="card-title" style="text-indent: -15px;">Miami, Florida</h5>
           </div>
 
 
